# mcp-mysql-explorer

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
.cursor/rules/: project-specification.mdc
scripts/: manual_smoke_check.py  run_tests.py
src/mcp_mysql_explorer/: __init__.py  __main__.py  server.py
src/mcp_mysql_server/: __init__.py  __main__.py  server.py
tests/: test_server.py
