[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-mysql-explorer"
version = "0.1.3"
description = "MCP server for querying MySQL databases — let AI agents explore schemas, run queries, and manage data via Model Context Protocol."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "xsg22" },
]
keywords = ["mcp", "mysql", "cursor", "ai", "agent", "model-context-protocol", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/xsg22/mcp-mysql-explorer"
Repository = "https://github.com/xsg22/mcp-mysql-explorer"
Issues = "https://github.com/xsg22/mcp-mysql-explorer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mysql_explorer"]

[project.scripts]
mcp-mysql-explorer = "mcp_mysql_explorer.server:main"
